--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>bc 22</h1>
-    <script src="./index.js"></script>
+    <script src="./index-5.js"></script>
   </body>
 </html>
